# bayesian-icp

./: .gitignore  CMakeLists.txt  README.md  config.json  config.md  merge_texts.ipynb
src/: CMakeLists.txt  abstract_sgd_optimizer.cpp  abstract_sgd_optimizer.h  abstract_sgld_optimizer.cpp  abstract_sgld_optimizer.h  adadelta.cpp  adadelta.h  adam.cpp  adam.h  align_pcd.cpp  fixed_sgd.cpp  fixed_sgd.h  momentum.cpp  momentum.h  pcl_align_pcd.cpp  point_cloud_batch.cpp  point_cloud_batch.h  rmsprop.cpp  rmsprop.h  sgdicp.cpp  sgdicp.h  sgld_rmsprop.cpp  sgld_rmsprop.h  sgld_rmsprop_2.cpp  sgld_rmsprop_2.h  test_optimizers.cpp  transform_cloud.cpp  types.h  utils.cpp  utils.h
